# aws-auto-scaler

./: Cargo.toml  README.md
src/: constants.rs  main.rs  redis_utils.rs
src/utils/: mod.rs  redis.rs
