[package]
name = "auto-scaler"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-web = "4.13.0"
env_logger = "0.11.9"
log = "0.4.29"
redis = { version = "1.0.5", features = ["tokio-native-tls-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
